# jellify-desktop

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  POLISH_TARGETS.md  README.md  ROADMAP.md  appcast.xml  codecov.yml  deny.toml  rust-toolchain.toml  typos.toml
.claude/: batch-plan.md
.claude/agents/: adversarial-reviewer.md  area-auditor.md  area-fixer.md  problem-triager.md
.claude/commands/: desktop-fix.md  desktop-loop.md  desktop-review.md  desktop-sweep.md
.claude/workflows/: drive-lyrebird-desktop.js  finalize-lyrebird-desktop.js  finish-appmodel-extraction.js
.github/: dependabot.yml  labels.yml  pull_request_template.md  zizmor.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  polish.yml
.github/workflows/: ci.yml  coverage.yml  e2e.yml  macos-release.yml  security.yml
Scripts/: area-lock.sh  create-issues.py  e2e-setup-jellyfin.sh  rebase-tests-rs.sh  smoke-test.sh  sync-labels.sh  wave-budget.sh  wave-report.sh
core/: Cargo.toml  build.rs
core/src/: client.rs  downloads.rs  enums.rs  error.rs  lib.rs  logging.rs  models.rs  player.rs  query.rs  storage.rs  tests.rs
core/src/migrations/: 001_initial.sql
core/src/tests/: client.rs  credential_store.rs  library_cache.rs  logging.rs  mod.rs  playlists.rs  status_events.rs
core/tests/: contract.rs  e2e_live.rs
core/tests/contract/: README.md
core/tests/contract/fixtures/: album_tracks.json  search.json  similar_items.json
core/tests/snapshots/: contract__album_tracks.snap  contract__search.snap  contract__similar_items.snap
design/: README.md
design/chats/: chat1.md
design/project/: Jellify Desktop.html  Lyrebird Desktop.html
design/project/assets/: jellify.css  lyrebird.css
design/project/src/: chrome.jsx  content.jsx  data.jsx  panels.jsx  screens.jsx  tokens.jsx
docs/: GITHUB-SECRETS.md  agentic-pipeline.md
examples/cli/: Cargo.toml
examples/cli/src/: main.rs
linux/: Cargo.toml  README.md  build.rs
linux/data/: org.jellify.Desktop.desktop  org.jellify.Desktop.metainfo.xml  org.lyrebird.Desktop.desktop  org.lyrebird.Desktop.metainfo.xml
linux/flatpak/: gen-sources.sh
linux/resources/: resources.gresource.xml
linux/src/: main.rs  model.rs  window.rs  window.ui
macos/: DISTRIBUTION.md  Package.swift
macos/Resources/: Info.plist  Jellify.entitlements
macos/Scripts/: a11y-audit.sh  build-core.sh  generate-appcast.sh  make-bundle.sh  make-dmg.sh  make-iconset.sh  notarize.sh  sign.sh
macos/Sources/Jellify/: AppDelegate.swift  AppModel.swift  Capabilities.swift  JellifyApp.swift  JellifyErrorPresenter.swift  ServerReachability.swift  Updater.swift
macos/Sources/JellifyAudio/: AudioEngine.swift  MediaSession.swift
macos/Sources/JellifyCore/: JellifyCore.swift
macos/Sources/Lyrebird/: AppDelegate.swift  AppModel+ItemActions.swift  AppModel+NowPlaying.swift  AppModel+Playback.swift  AppModel+PlaybackControls.swift  AppModel+PlayerEvents.swift  AppModel+PlaylistTracks.swift  AppModel+Playlists.swift  AppModel+Queue.swift  AppModel+Resolvers.swift  AppModel+Session.swift  AppModel.swift  Capabilities.swift  CoreLogBridge.swift  DurationFormatter.swift  LyrebirdApp.swift  NetworkMonitor.swift
macos/Sources/LyrebirdAudio/: AudioEngine+DSP.swift  AudioEngine.swift  AudioOutputDevices.swift  DSPAudioFileStreamParser.swift  DSPTrackStreamer.swift  EngineDSPPipeline.swift  MediaSession.swift  NormalizationSettings.swift  ReplayGain.swift
macos/Sources/SmokeTest/: main.swift
macos/Tests/LyrebirdTests/: AboutInfoTests.swift  AccessibleThemeTests.swift  AmbientPaletteTests.swift  AppShortcutsTests.swift  ArtistDetailTransportTests.swift  AudioEnginePreloadTests.swift  AudioOutputDevicesTests.swift  BreadcrumbNameResolutionTests.swift  CapabilityGatedControlsTests.swift  DockTileTests.swift  DownloadsTests.swift  DurationFormatterTests.swift  DynamicTypeReflowTests.swift  EmptyStateAccessibilityTests.swift  EngineDSPPipelineTests.swift  ErrorSurfaceTests.swift  FullScreenChromeTests.swift  InfoPlistLocalizationTests.swift  LibraryFilterTests.swift  MediaSessionTests.swift  MenuBarVisibilityTests.swift  MiniPlayerClickThroughTests.swift  MiniPlayerStateTests.swift  MoodRadioTests.swift  MoveToApplicationsTests.swift  NormalizationSettingsTests.swift  PlainTextOverviewTests.swift  PlayerEventStreamTests.swift  PlaylistDetailInteractionTests.swift  PlaylistExportTests.swift  PlaylistInteractionTests.swift  PlaylistReorderHandleTests.swift  PlaylistSidebarOrderTests.swift  QueueInspectorActionsTests.swift  ReplayGainTests.swift  ScopedSearchTests.swift  SessionRestoreTests.swift  SidebarPlaylistRenameCommitTests.swift  SidebarServerStatusTests.swift  SwitchControlGroupingTests.swift  (+2 more)
macos/docs/a11y/: README.md
research/: 01-macos-polish.md  02-media-integration.md  03-ux-patterns.md  04-jellyfin-api.md  05-macos-distribution.md  06-screen-specs.md  07-a11y-i18n.md  08-windows-port.md  09-linux-port.md  10-perf-reliability.md
windows/: Directory.Build.props  Jellify.sln  Lyrebird.sln  README.md  uniffi.toml
windows/Jellify.App/: App.xaml  App.xaml.cs  Jellify.App.csproj  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  app.manifest
windows/Jellify.App/Pages/: ShellPage.xaml  ShellPage.xaml.cs
windows/Jellify.App/Services/: INavigationService.cs  NavigationService.cs
windows/Jellify.App/ViewModels/: HomeViewModel.cs  LibraryViewModel.cs  LoginViewModel.cs
windows/Jellify.Core/: IJellyfinClient.cs  IPlaybackStateStore.cs  IQueueStore.cs  Jellify.Core.csproj
windows/Lyrebird.App/: App.xaml  App.xaml.cs  Lyrebird.App.csproj  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  app.manifest
windows/Lyrebird.App/Pages/: ShellPage.xaml  ShellPage.xaml.cs
windows/Lyrebird.App/Services/: INavigationService.cs  NavigationService.cs
windows/Lyrebird.App/ViewModels/: HomeViewModel.cs  LibraryViewModel.cs  LoginViewModel.cs
windows/Lyrebird.Core/: IJellyfinClient.cs  IPlaybackStateStore.cs  IQueueStore.cs  Lyrebird.Core.csproj
windows/tools/: build-core.ps1  gen-bindings.ps1
(+124 files in other folders)
