[package]
name = "jellify_core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared Rust core for Jellify desktop apps — Jellyfin API, audio engine, storage"

[lib]
name = "jellify_core"
crate-type = ["lib", "staticlib", "cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[dependencies]
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true

reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true

rusqlite.workspace = true
keyring.workspace = true


anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
parking_lot.workspace = true

uniffi.workspace = true

[dev-dependencies]
wiremock.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }
tracing-subscriber.workspace = true

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }
