[package]
name = "jellify_core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared Rust core for Jellify desktop apps — Jellyfin API, audio engine, storage"

[lib]
name = "jellify_core"
crate-type = ["lib", "staticlib", "cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[dependencies]
tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
futures.workspace = true

reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true

rusqlite.workspace = true
keyring.workspace = true


anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
parking_lot.workspace = true

uniffi.workspace = true

# Platform-native credential store backends. Without these `keyring` falls back
# to its in-memory mock store with no cross-process persistence, which makes
# `resume_session()` a no-op across app restarts. The Linux target will land
# alongside the GTK port (see research/09-linux-port.md).
[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
keyring = { workspace = true, features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { workspace = true, features = ["windows-native"] }

[dev-dependencies]
wiremock.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }
tracing-subscriber.workspace = true
insta.workspace = true

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }
