[package]
name = "jellify-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Minimal CLI exercising jellify_core — login, list, play"
publish = false

[[bin]]
name = "jellify-cli"
path = "src/main.rs"

[dependencies]
jellify_core = { path = "../../core" }
tokio = { workspace = true }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
