[package]
name = "lyrebird-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Minimal CLI exercising lyrebird_core — login, list, play"
publish = false

[[bin]]
name = "lyrebird-cli"
path = "src/main.rs"

[dependencies]
lyrebird_core = { path = "../../core" }
tokio = { workspace = true }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
